H1 overlap correction

--- a/style/style.css
+++ b/style/style.css
@@ -268,7 +268,7 @@ li {
 .worksh1 {
   font-weight: 700;
   color: #172b4d;
-  font-size: 32px;
+  font-size: 7.77vw;
   line-height: 44px;
   margin: 5px 46px 0 16px;
   height: 48px;
